kubernetes/apps/kintai/base/back.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kintai-backend
  labels:
    app: kintai-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kintai-backend
  template:
    metadata:
      labels:
        app: kintai-backend
    spec:
      containers:
        - name: app
          image: ghcr.io/piny940/kintai-backend:1.0.5 # {"$imagepolicy": "default:kintai-backend"}
          ports:
            - containerPort: 8080
