kubernetes/apps/kintai/base/front.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kintai-frontend
  labels:
    app: kintai-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kintai-frontend
  template:
    metadata:
      labels:
        app: kintai-frontend
    spec:
      containers:
        - name: app
          image: kintai-frontend
          ports:
            - containerPort: 4400
          livenessProbe:
            httpGet:
              path: /
              port: 4400
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 4400
            initialDelaySeconds: 5
            periodSeconds: 3
            failureThreshold: 3
