kubernetes/apps/kintai/base/front.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kintai-frontend
spec:
  selector:
    app: kintai-frontend
  ports:
    - name: http
      protocol: TCP
      port: 4400
      targetPort: 4400
  type: ClusterIP
